--- a/Lab1-matrixmul/Report/report.tex
+++ b/Lab1-matrixmul/Report/report.tex
@@ -31,7 +31,7 @@ Your submission will be graded on the following parameters.
 
 \subsection{Lab \#1: Matrix Multiplication}
 
-\begin{comment}
+\begin{comment} %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{enumerate}
 
 \item Unzip \texttt{Lab1-matrixmul.zip} into your \texttt{sdk/projects} directory
@@ -54,15 +54,12 @@ Your submission will be graded on the following parameters.
 
 
 \item Three arguments:  The application will read its inputs from the files provided by the first two arguments, and write its output to the file provided in the third. Note that if you wish to use the output of one run of the application as an input, you must delete the first line in the output file, which displays the accuracy of the values within the file. The value is not relevant for this application.
-
-
 \end{itemize}
-
 
 \item To submit your solution, upload to Blackboard a zipped file containing your entire submission, including the text file containing the answers to the questions.  
 
 The \texttt{.tgz} file should contain all the files in the \texttt{Lab1-matrixmul} folder provided, with all the changes and additions you have made to the source code.  In addition, provide a text file, Word Document, or PDF file with your answers to the following questions:
-\end{comment}
+\end{comment} %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{enumerate}
 
