--- a/Lab1-matrixmul/Report/report.tex
+++ b/Lab1-matrixmul/Report/report.tex
@@ -29,7 +29,7 @@ Your submission will be graded on the following parameters.
 \setcounter{page}{0}
 \newpage
 
-\subsection{Lab \#1: Matrix Multiplication}
+\subsection*{Lab \#1: Matrix Multiplication}
 
 \begin{comment} %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{enumerate}
@@ -65,11 +65,11 @@ The \texttt{.tgz} file should contain all the files in the \texttt{Lab1-matrixmu
 
 \item How many times is each element of the input matrices loaded during the execution of the kernel?
 
-\subitem Either $3$ or $4$. Each element is copied into `shared' from the device memory and accessed by each thread. Each thread takes in two of the inputs and returns an output. 
+\subitem Four. Each element is copied into `shared' from the device memory and accessed by each thread.
 
 \item What is the memory-access to floating-point computation ratio in each thread?  Consider a multiply and addition as separate operations, and ignore the storing of the result.  Only global memory loads should be counted towards your off-chip bandwidth
 
-\subitem 
+\subitem One to one. Every iteration of the loop performs two memory access for one addition and one multiplication. 
 
 \end{enumerate}
 
