--- a/Lab2-reduction/report/report.tex
+++ b/Lab2-reduction/report/report.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt]{article}
-\newcommand{\MyFullName}{Jon Wedaman}
-\newcommand{\MyLastName}{Wedaman}
+\newcommand{\MyFullName}{Jon Wedaman, Jeremy Lavergne}
+\newcommand{\MyLastName}{Wedaman, Lavergne}
 \RequirePackage{macroNorm}
 \title{ The Title }
 \author{\MyFullName}
