added template for report

--- a/Lab2-reduction/report/report.tex
+++ b/Lab2-reduction/report/report.tex
@@ -1,10 +1,10 @@
 \documentclass[12pt]{article}
-\newcommand{\MyFullName}{Jon Wedaman}
-\newcommand{\MyLastName}{Wedaman}
+\newcommand{\MyFullName}{Jeff Farris, Jeremy Lavergne, Alex Padgett, Jon Wedaman}
+\newcommand{\MyLastName}{Farris, Lavergne, Padgett, Wedaman}
 \RequirePackage{macroNorm}
 \title{ The Title }
 \author{\MyFullName}
-\date{2011-04-22}
+\date{ Due eventually }
 \begin{document}
 \maketitle
 \thispagestyle{empty}
@@ -14,6 +14,8 @@
 \setcounter{page}{0}
 \newpage
 
-%content
+\def\thesection{\Roman{section}.}
+
+\section{ blah }
 
 \end{document}
