Updated report template

--- a/Lab2-reduction/report/report.tex
+++ b/Lab2-reduction/report/report.tex
@@ -1,10 +1,10 @@
 \documentclass[12pt]{article}
-\newcommand{\MyFullName}{Jon Wedaman, Jeremy Lavergne}
-\newcommand{\MyLastName}{Wedaman, Lavergne}
+\newcommand{\MyFullName}{Jon Wedaman, Jeremy Lavergne, Alex Padgett, Jeff Farris}
+\newcommand{\MyLastName}{Wedaman, Lavergne, Padgett, Farris}
 \RequirePackage{macroNorm}
-\title{ The Title }
+\title{ Parallel Computing \\ Lab 2: Sieve of Eratosthenes }
 \author{\MyFullName}
-\date{ Due eventually }
+\date{ Due Monday, April 25th }
 \begin{document}
 \maketitle
 \thispagestyle{empty}
@@ -15,7 +15,26 @@
 \newpage
 
 \def\thesection{\Roman{section}.}
+\hfill \\
+\section{ Optimizations }
+\begin{enumerate}[1.]
 
-\section{ blah }
+\item This is where the first optimization goes
 
-\end{document}
+\item This is where the second one goes
+
+\item This is where the third one goes
+\end{enumerate}
+
+\section { Timings}
+
+
+\begin{center}
+    \begin{tabular}{ | l | l | l |}
+	\hline
+   	Optimization & Original Time (s) & Final Time (s) \\ \hline
+    	1 & 0.0001 & 0.0001 \\ \hline
+	2 & 0.0001 & 0.0001 \\ \hline
+	3 & 0.0001 & 0.0001 \\  \hline
+    \end{tabular}
+\end{center}\end{document}
