--- a/Lab2-reduction/report/report.tex
+++ b/Lab2-reduction/report/report.tex
@@ -17,13 +17,13 @@
 \def\thesection{\Roman{section}.}
 \hfill \\
 \section{ Background }
-	The Sieve of Eratosthenes is an algorithm used to find prime numbers between 1 and another number.  Parallelization on the CUDA architecture is trivial at first, as one can simply offload an array to the kernel and begin sieving in a single block.  This works similar to the sequential algorithm by flagging each multiple of a given number as a non-prime.  However, parallelizing the sieve in this "naive" fashion presents a distinct problem when the upper bound reaches large numbers such as the bound given in the assignment, $2^{30}$.  The graphics card simply cannot allocate an array of appropriate size to hold all integers up to the bound.
 
-Our approach to solving this problem entails separating the initial array into smaller pieces which can be digested by the GPU without memory issues.  To do this, we split the array into blocks, each responsible for 1024.  Using the size of this block as an offset and a bitmask, we can call the kernel on each individual block and produce a list of the prime numbers within it.  We then filter the prime numbers out of the block and place it in a list of primes.  This list is passed back into the kernel and used to ensure that we can continue the sieve throughout the segments of the original array.
+\paragraph{}The Sieve of Eratosthenes is an algorithm used to find prime numbers between 1 and an arbitrary $n$. We can naïvely model this in parallel by assigning each work item an enumerated value ($1\ldots n$) and ``sieving'' each multiple of these values until all that remains are the primes. However, parallelizing the sieve in this fashion presents a distinct problem when the upper bound reaches large numbers such as the bound given in the assignment, $2^{30}$.  The graphics card simply cannot allocate an array of appropriate size to hold all integers up to the bound. Clearly we need to break down the problem into discrete chunks.
+
+We approach this problem by partitioning the initial array into evenly sized chunks which can be digested by the GPU bounded by the number of primes found instead of $n$. 
 
 \section{ Optimizations }
 \begin{enumerate}[1.]
-
 \item This is where the first optimization goes
 
 \item This is where the second one goes
@@ -31,8 +31,7 @@ Our approach to solving this problem entails separating the initial array into s
 \item This is where the third one goes
 \end{enumerate}
 
-\section { Timings}
-
+\section{ Timings }
 
 \begin{center}
     \begin{tabular}{ | l | l | l |}
