added an implementation blurb

--- a/Lab2-reduction/report/report.tex
+++ b/Lab2-reduction/report/report.tex
@@ -45,4 +45,13 @@ We approach this problem by partitioning the initial array into evenly sized chu
 	2 & 0.0001 & 0.0001 \\ \hline
 	3 & 0.0001 & 0.0001 \\  \hline
     \end{tabular}
-\end{center}\end{document}
+\end{center}
+
+\newpage
+\section{ Implementation }
+
+Implemented in Python with OpenCL. Attached are two files: \texttt{main.py} and \texttt{part1.cl}. These respectively contain the python code that sets up the environment and the C code that runs on the device.
+ 
+% \lstinputlisting[language=Python,basicstyle=\footnotesize\ttfamily]{../main.py}
+
+\end{document}
