--- a/Lab2-reduction/report/report.tex
+++ b/Lab2-reduction/report/report.tex
@@ -40,11 +40,12 @@ We approach this problem by partitioning the initial array into evenly sized chu
 \begin{center}
     \begin{tabular}{r | c | c | c | c |}
 	\hline
-   	Optimization & Test1 & Test2 & Test3 & TestAvg \\
+   	Optimization & Test1 ($\mu s$) & Test2 ($\mu s$) & Test3 ($\mu s$) & TestAvg ($\mu s$) \\
    	\hline
-   	1            & 0.0   & 0.00  & 0.00  & 0.00     \\
-   	2            & 0.0   & 0.00  & 0.00  & 0.00     \\
-   	3            & 0.0   & 0.00  & 0.00  & 0.00     \\
+   	0            & 537.473 & 545.274 & 532.194 & 538.314  \\
+   	1            & 528.693 & 528.804 & 524.491 & 527.329  \\
+   	2            & 421.529 & 431.790 & 472.849 & 442.056  \\
+   	3            & 401.231 & 411.245 & 398.912 & 403.796  \\
     \end{tabular}
 \end{center}
 
